--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,7 @@
 \newcommand{\header}{
     \begin{center}
         {\LARGE \textbf{\textcolor{headerblue}{Negar Honarvar Sedighian}}}\\[0.2cm]
-        {\large Shahid Beheshti University, Tehran, Iran}\\[0.2cm]
+        {\large Mashhad, Iran}\\[0.2cm]
         \faPhone\ (+98) 903 020 4891 \quad
         \faHome\ \href{https://negarhonarvar.github.io}{Homepage} \quad
         \faEnvelope\ \href{mailto:negarhonarvar.se@gmail.com}{Email} \quad
@@ -79,10 +79,10 @@
 \vspace*{-10mm}
 % \makecvtitle
 \section{Education}
-\item{\cventry{Sep. 2020 to Feb. 2025[Expected]}{Bachelor of Science in Computer Engineering}{\href{https://www.sbu.ac.ir/web/cse}{Shahid Behehshti University} }{Tehran, Iran}{}{\vspace{3pt} 
+\item{\cventry{Sep. 2020 to Feb. 2025}{Bachelor of Science in Computer Engineering}{\href{https://www.sbu.ac.ir/web/cse}{Shahid Behehshti University} }{Tehran, Iran}{}{\vspace{3pt} 
 \begin{itemize}
-\item \textbf{Cumulative GPA: 17.42/20 (3.67/4)}
-\item \textbf{GPA of last two years: 18.23/20 (3.78/4)}
+\item \textbf{Cumulative GPA: 17.49/20 (3.68/4)}
+\item \textbf{GPA of last two years: 18.32/20 (3.79/4)}
 \end{itemize}
 }}
 
@@ -119,6 +119,21 @@
 
 \end{itemize}
 
+% \makecvtitle
+\section{Work Experience}
+\cventry{Jun. 2023 to Oct. 2023}{Dotin}{\href{}{Network Security Assistant}}{Tehran, Iran}{}{\vspace{3pt}
+\begin{itemize}
+    \item Management of access levels for company members in various departments to available resources and information in each section by utilizing Windows Azure, as well as identifying and analyzing potential weakness and breaches in the network.
+\end{itemize}
+}
+
+\cventry{Jan. 2023 to Jun. 2023}{Dotin School}{\href{}{Network Security Intern}}{Tehran, Iran}{}{\vspace{3pt}
+\begin{itemize}
+    \item Internship at Dotin school bootcamp for network security.
+    \item Learned about different types of security vulnerabilities, how to identify risks, respond to incidents, and perform penetration testing.
+\end{itemize}
+}
+
 
 \section{Research Interests}
 
@@ -130,7 +145,7 @@
 \vspace{3pt}
 
 \section{Research Experience }
-\item{\cventry{On Going}{IMAGE PROCESSING AND DISTRIBUTED SYSTEMS LAB}
+\item{\cventry{in preparation}{IMAGE PROCESSING AND DISTRIBUTED SYSTEMS LAB}
 {B.Sc Thesis}{Shahid Beheshti University}{}{\vspace{3pt} 
 \begin{itemize}
     \item Proposing a Dynamic Attentive Graph Neural Network for Cardiac MRI Reconstruction in a cascading manner.
@@ -154,80 +169,16 @@
 \begin{itemize}
 \item \textbf{Ranked \nth{1}}{{in \textbf{National Organization for Development of Exceptional Talents} Secondary School Entrance Exam in Khorasan Razavi Province}, 2017.}
 \end{itemize}
-
-
-
-\section{Teaching Assistant Experience}
-\begin{itemize}
-
-    \item \textbf{Artificial Intelligence } \hfill Sep. 2024 - Present
-\begin{itemize}
-        \item Lectured by: Dr. Armin Salimi-Badr
-
-    \end{itemize}
-\item \textbf{Discrete Mathematics } \hfill Sep. 2024 - Present
-\begin{itemize}
-        \item Lectured by: Dr. Farshad Safaei
-
-
-    \end{itemize}
-
-\item \textbf{Algorithms Design } \hfill Sep. 2024 - Present
-\begin{itemize}
-        \item Lectured by:Dr. Ramak Ghavamizadeh
-
-
-    \end{itemize}
-    \item \textbf{Software Engineering } \hfill Feb. 2024 - Jul. 2024 (6 mos)
-    \begin{itemize}
-        \item Lectured by: Dr. Mehran Alidoostnia
-    \end{itemize}
-
-    \item \textbf{Technical English} \hfill Sep. 2023 - Jul. 2024 (11 mos)
-    \begin{itemize}
-        \item Lectured by: Dr. Vahidi Asl
-
-    \end{itemize}
-
-    \item \textbf{Computer Architecture} \hfill Sep. 2023 - Jan. 2024 (5 mos)
-    \begin{itemize}
-        \item Lectured by: Dr. Rahmati
-    \end{itemize}
-
-    \item \textbf{Advanced Programming} \hfill Sep. 2023 - Jan. 2024 (5 mos)
-    \begin{itemize}
-        \item Lectured by: Dr. Vahidi Asl
-    \end{itemize}
 \newpage
-    \item \textbf{Artificial Intelligence}\hfill Sep. 2023 - Jan. 2024 (5 mos)
-    \begin{itemize}
-        \item Lectured by: Dr. Mehrnoush Shamsfard
-    \end{itemize}
-
-    \item \textbf{Compiler Design} \hfill Sep. 2023 - Jan. 2024 (5 mos)
-    \begin{itemize}
-        \item Lectured by: Dr. Mehran Alidoostnia
-    \end{itemize}
-
-    \item \textbf{Computational Intelligence} \hfill Sep. 2023 - Jan. 2024 (5 mos)
-    \begin{itemize}
-        \item Lectured by: Dr. Shahabedin Nabavi
-    \end{itemize}
-
-    \item \textbf{Operating Systems Labratory}\hfill Sep. 2023 - Jan. 2024 (5 mos)
-    \begin{itemize}
-        \item Lectured by: Dr. Shahabedin Navabi
-    \end{itemize}
-
-\item \textbf{Statistic and Probability}\hfill Sep. 2023 - Jan. 2024 (5 mos)
-    \begin{itemize}
-        \item Lectured by: Dr. Farshad Safaei
-
-\end{itemize}
-
-
-
 \section{Projects}
+
+\cventry{}{ \textbf{\href{https://github.com/negarhonarvar/DAGMRNet}{Link to GitHub Repository}}}{DAGMRNet: Dynamic Attentive Graph Learning for Cardiac MRI Reconstruction}{Feb. 2025}{}{
+    \vspace{2pt}
+    \begin{itemize}
+        \item   A Dynamic Attentive GNN model for Reconstruction of highly under-sampled Cardiac MRI images of CMRxRecon Dataset is proposed.
+        \item The proposed model reconstructs under-sampled cardiac MRI images by leveraging both spatial and temporal relationships in the data according to self-similarity image prior. The model utilizes a PromptUnet, a U-Net enhanced with prompt and attention blocks, introduced by PromptMR framework for sensitivity map estimation.
+    \end{itemize}
+}
 \cventry{}{{\textbf{\href{https://github.com/negarhonarvar/StockTrading_DRL}{Link to GitHub Repository}}}}{Automated Stock Trading Strategy with DRL}{Jun. 2024}{}{
     \vspace{2pt}
     \begin{itemize}
@@ -286,15 +237,6 @@
         \item Algorithms include K-Nearest Neighbors, Support Vector Machine (SVM), Decision Tree, and Gradient Descent for supervised learning; DBSCAN is used as an unsupervised algorithm.
     \end{itemize}
 }
-
-\cventry{}{ \textbf{\href{https://github.com/negarhonarvar/Robatics}{Link to GitHub Repository}}}{Robotics}{Dec. 2023}{}{
-    \vspace{2pt}
-    \begin{itemize}
-        \item Controllers for e-puck in Webots environment using popular Localization, Planning, and Navigation algorithms.
-        \item The controllers range from simple to complex, providing beginners with a better understanding of the control process.
-    \end{itemize}
-}
-\newpage
 \cventry{}{ \textbf{\href{https://github.com/negarhonarvar/TronGame}{Link to GitHub Repository}}}{Tron Game Agent}{May. 2023}{}{
     \vspace{2pt}
     \begin{itemize}
@@ -303,27 +245,4 @@
     \end{itemize}
 }
 
-\section{\textbf{Referrers}}
-
-\vspace{4pt}
-
-%\begin{itemize}
-\begin{itemize}
-\begin{itemize}
-    
-    \item \textbf{Dr. Armin Salimi-Badr} \\
-    \hfill Assistant Professor of Software Engineering, \href{https://scholar.google.com/citations?view_op=view_org&hl=en&org=15042406923477825387}{Shahid Beheshti University}
-        \item \textbf{Dr. Shahabedin Nabavi} \\
-    \hfill Faculty of Computer Science and Engineering, \href{https://scholar.google.com/citations?view_op=view_org&hl=en&org=15042406923477825387}{Shahid Beheshti University}
-    
-    \item     \textbf{Dr. Mojtaba Vahidi-Asl} \\
-    \hfill Assistant Professor of Software Engineering, \href{https://scholar.google.com/citations?view_op=view_org&hl=en&org=15042406923477825387}{Shahid Beheshti University}
-    \item \textbf{Dr. Mehran Alidoost Nia} \\
-    \hfill Assistant Professor of Computer Engineering, \href{https://scholar.google.com/citations?view_op=view_org&hl=en&org=15042406923477825387}{Shahid Beheshti University}
-\end{itemize}
-\end{itemize}
-
-
-  
-  
 \end{document}
